--- a/packages/image-builder-cornell/config.yml
+++ b/packages/image-builder-cornell/config.yml
@@ -1,5 +1,5 @@
 Id:             'image-builder-cornell'
-Description:    'Custom app for image build tasks - buildtest1'
+Description:    'Custom app for image build tasks'
 Version:        '1.0'
 
 Files: 
